# repo-context-card

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml
repo_context_card/: __init__.py  cli.py  render.py  scanner.py
tests/: test_cli.py  test_scanner.py
