[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-context-card"
version = "0.1.0"
description = "Generate compact repository context cards for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ukyo" }
]
keywords = ["ai-agents", "context-engineering", "developer-tools", "cli", "codex", "claude-code", "cursor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
repo-context-card = "repo_context_card.cli:main"

[project.urls]
Homepage = "https://github.com/Uky0Yang/repo-context-card"
Issues = "https://github.com/Uky0Yang/repo-context-card/issues"
